[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Dialog/LanguagePanel.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.298039, 0.298039, 0.298039, 1 )
border_width_left = 2
border_width_top = 20
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="LanguagePanel" type="Panel"]
margin_right = 188.0
margin_bottom = 64.0
rect_min_size = Vector2( 188, 64 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_constants/margin_right = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 3.0
margin_right = 178.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.12549, 0.658824, 0.0313726, 1 )
text = "Language name"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 188.0
margin_bottom = 59.0
custom_constants/margin_right = 3
custom_constants/margin_left = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2"]
margin_left = 3.0
margin_right = 185.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
caret_blink = true
[connection signal="focus_entered" from="VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_LineEdit_text_changed"]
